
    - CMFCore.MemberDataTool: Fixed the pruneMemberData functionality in the
      ZMI: Now it is enough to press the button once.

    - Collector #381:  CMFCore unit tests depended on CMFDefault / workflow.

    - CalendarTool: If an event ends at exactly midnight, don't show it
      in the list of events for the day starting at midnight.
      (http://www.zope.org/Collectors/CMF/246)

  Features

    - CMFCore:  added 'skinname' to the thread-specific tuple created by
      the Skinnable base class to cache the skin path lookup, to facilitate
      querying later;  added a 'getCurrentSkinName' to the Skinnable API
      to do the query.  Thanks to Laurent Rowe for the patch.

    - CMFSetup: added support for importing and exporting workflow script
      metadata for scripts that are External Methods. One very important
      difference to other scripts remains: Since the CMFSetup machinery
      cannot access the filesystem code for external methods it only
      saves the data needed to instantiate the ZODBi-based External Method 
      object. If, during an import, the filesystem-based code cannot be
      found, the import will fail.

    - CMFActionIcons:  added support for exporting / importing
      action icons tool configuration (via GenericSetup).

    - CMFSetup:  added support for configuring content type registry.

    - CMFSetup:  added support for configuring caching policy manager.

    - CMFSetup:  added support for configuring cookie authentication and
      mailhost tools (http://www.zope.org/Collectors/CMF/387).

    - CMFCore.CachingPolicyManager: Caching policies can now control all the 
      Cache-Control tokens defined in the HTTP 1.1 spec (s-maxage, public, 
      private, no-transform).  When no-cache is enabled, a Pragma: no-cache 
      header is also sent for HTTP 1.0 clients. Thanks go to Geoff Davis
      for contributing the necessary patches.

    - CMFCore.FSPageTemplate:  These now have the option to return a status 