@@ -169,6 +169,12 @@ _SPECIAL_IMPORT = """\
 </dummy>
 """
 
+_EMPTY_ATTR_IMPORT = """\
+<?xml version="1.0"?>
+<dummy title="">
+</dummy>
+"""
+
 def _testFunc( *args, **kw ):
 
     """ This is a test.
@@ -358,7 +364,10 @@ class ImportConfiguratorBaseTests(_ConfiguratorBaseTests):
                 return {
                   'dummy':
                     { 'property':    {KEY: 'properties', DEFAULT: ()},
-                      'description': {CONVERTER: self._convertToUnique} } }
+                      'description': {CONVERTER: self._convertToUnique},
+                      'title': {},
+                      '#text': {KEY: 'text'},
+                      } }
 
         return Configurator
 
@@ -461,9 +470,19 @@ class ImportConfiguratorBaseTests(_ConfiguratorBaseTests):
             self.fail('CMF Collector issue #352 (comment or empty '
                       'description bug): KeyError raised')
 
-        self.assertEqual( len(site_info), 2 )
+        self.assertEqual( len(site_info), 3 )
         self.assertEqual( site_info['description'], '' )
         self.assertEqual( len(site_info['properties']), 0 )
+        self.assertEqual( site_info['text'], '' )
+
+    def test_parseXML_empty_with_encoding(self):
+        site = self._initSite()
+        configurator = self._makeOne(site, encoding='latin-1')
+        site_info = configurator.parseXML(_EMPTY_ATTR_IMPORT)
+        self.assertEqual(site_info['title'], '')
+        self.assertEqual(type(site_info['title']), str)
+        self.assertEqual(site_info['text'], '')
+        self.assertEqual(type(site_info['text']), str)
 
     def test_initProperty_normal(self):
 
